--- a/hyperparams/procgen/config.yml
+++ b/hyperparams/procgen/config.yml
@@ -60,7 +60,7 @@ easy-200:
 
 hard:
     algo: ppo
-    n_envs: 128
+    n_envs: 1
     n_steps: 256
     epoch: 3
     mini_batch_per_epoch: 8
@@ -80,9 +80,9 @@ hard:
 
 hard-500:
     algo: ppo
-    n_envs: 1
-    n_steps: 100
-    epoch: 1
+    n_envs: 256  # 256
+    n_steps: 256  # 256
+    epoch: 3  # 3
     mini_batch_per_epoch: 8
     mini_batch_size: 8192
     gamma: 0.999
