--- a/hyperparams/procgen/config.yml
+++ b/hyperparams/procgen/config.yml
@@ -114,7 +114,7 @@ hard-plus:
     value_coef: 0.5
     entropy_coef: 0.01
     normalize_adv: True
-    normalize_rew: True
+    normalize_rew: False  # True might have caused non-10 rewards
     use_gae: True
     architecture: impala
     recurrent: False
