--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ absl-py==2.1.0
 cachetools==4.2.4
 certifi==2024.2.2
 cffi==1.15.1
+chardet==3.0.4
 charset-normalizer==3.3.2
+Click==7.0
 cloudpickle==1.2.2
+cycler==0.10.0
 filelock==3.0.10
 future==1.0.0
 glcontext==2.5.0
@@ -17,8 +20,10 @@ idna==3.7
 imageio==2.31.2
 imageio-ffmpeg==0.3.0
 importlib-metadata==6.7.0
+kiwisolver==1.0.1
 Markdown==3.4.4
 MarkupSafe==2.1.5
+matplotlib==3.5.3
 moderngl==5.10.0
 numpy==1.21.6
 # nvidia-cublas-cu11==11.10.3.66
@@ -33,12 +38,14 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyglet==1.3.2
+pyparsing==2.3.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==2.0.0
 rsa==4.9
+scikit-learn==0.20.0
 scipy==1.7.3
 six==1.16.0
 tensorboard==2.5.0
@@ -47,7 +54,9 @@ tensorboard-plugin-wit==1.8.1
 torch==1.13.1
 torchaudio==0.13.1
 torchvision==0.14.1
+tqdm==4.28.1
 typing_extensions==4.7.1
+ujson==1.35
 urllib3==2.0.7
 Werkzeug==2.2.3
 zipp==3.15.0
